--- a/source/0.4/src/main/webapp/main.xhtml
+++ b/source/0.4/src/main/webapp/main.xhtml
@@ -20,11 +20,11 @@
     
       <div class="w3-container w3-mobile w3-row w3-padding">
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-large">
+          <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
           #{beanPatient.username}</button>
           <div id="modalPatientProfile" class="w3-modal">
             <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
-              <span onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times</span>
+              <span onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times;</span>
               <h:form id="user-profile-form" class="w3-container">
         			<h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all w3-responsive">
 					    	<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>#{pt.username}</h:column>
@@ -58,18 +58,18 @@
 								<h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
 									<h:inputSecret value="#{beanPatient.password}" required="true" class="w3-input w3-border" />
 									<h:inputSecret value="#{beanPatient.password2}" required="true" class="w3-input w3-border" /></h:column>
-								<h:column><h:commandButton value="UPDATE PROFILE" action="#{beanPatient.updateProfile()}" class="w3-button w3-teal w3-round-large" />
+								<h:column><h:commandButton value="UPDATE PROFILE" action="#{beanPatient.updateProfile()}" class="w3-button w3-teal w3-round-xxlarge" />
         					<button type="reset" class="w3-button w3-teal w3-round-large">RESET</button></h:column>
 								</h:dataTable>
 							</h:form>
-							<button onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-green w3-round-large">CLOSE</button>
+							<button onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-green w3-round-xxlarge">CLOSE</button>
            	</div>
 					</div>
         </div>
         <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
           <h:form>
-            <h:commandButton action="#{beanPatient.logout}" value="LOGOUT" class="w3-button w3-green w3-round-large"></h:commandButton>
+            <h:commandButton action="#{beanPatient.logout}" value="LOGOUT" class="w3-button w3-green w3-round-xxlarge"></h:commandButton>
           </h:form>
         </div>
       </div>
@@ -109,11 +109,11 @@
     <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
       <div class="w3-container w3-bar w3-mobile w3-row w3-padding">
         <a href="index.xhtml">
-          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-large">HOME</button>
+          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">HOME</button>
           </div>
         </a>
         <a href="patient-profile.xhtml">
-          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-large">PROFILE-PAGE</button>
+          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">PROFILE-PAGE</button>
           </div>
         </a>
       </div>
