--- a/source/0.4/src/main/webapp/provider-login.xhtml
+++ b/source/0.4/src/main/webapp/provider-login.xhtml
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<div class="w3-content">
+<div class="w3-container">
 
-    <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card w3-section">
+    <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
       <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third"></div>
       <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
         <a href="index.xhtml"><h1>myRX</h1></a>
@@ -57,11 +57,12 @@
           <tr><td>instructor : cmsc495 : 9999999</td></tr>
           <tr><td><h3>Users in Database (local MySQL)</h3></td></tr>
           <tr><td><h3>emmittbrown : password : 1111111</h3></td></tr>
+          <tr><td><h3>drwho : password : 55555</h3></td></tr>
         </table>
       </div>
     </div>
 
-    <div id="footer" class="footer w3-container w3-bar w3-teal w3-card w3-section">
+    <div id="footer" class="footer w3-container w3-bar w3-teal w3-card">
       <a href="index.xhtml"><h2>myRX</h2></a>
     </div>
 	
