--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-<div class="w3-content">
+<div class="w3-container">
 
-  <div id="body" class="w3-container w3-mobile w3-auto">
+  <div id="body" class="w3-container w3-mobile">
   
     <div id="top" class="w3-container w3-bar w3-teal w3-card">
     
@@ -35,7 +35,7 @@
 
     <div id="middle" class="w3-container w3-mobile w3-card">
 
-      <h:dataTable id="providerPatientTable" value="#{beanDButil.getPatients(beanProvider.username)}" var="patient" class="w3-table-all">
+      <h:dataTable id="providerPatientTable" value="#{beanDButil.getPatients(beanProvider.username)}" var="patient" class="w3-table-all w3-responsive">
         <h:column>
           <f:facet name="header">Last Name</f:facet>
           #{patient.lastName}
