--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -21,8 +21,54 @@
     
       <div class="w3-container w3-content w3-mobile w3-row w3-padding">
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <a href="provider-profile.xhtml"><button class="w3-button w3-green w3-round-xxlarge">
-           #{beanProvider.username}</button></a>
+          <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
+          #{beanProvider.username}</button>
+          <div id="modalProviderProfile" class="w3-modal">
+            <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
+              <span onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times;</span>
+              <h:form id="user-profile-form" class="w3-container">
+        			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
+					    	<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet><h3>#{pt.username}</h3></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>#{pt.email}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>#{pt.token}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all">
+						  	<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>#{pt.firstName}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>#{pt.middleInitial}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>#{pt.lastName}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>#{pt.sex}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>#{pt.phone}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Address</label></f:facet>#{pt.address}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
+								<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>
+									<h:inputText value="#{beanProvider.username}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>
+									<h:inputText value="#{beanProvider.email}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>
+									<h:inputText value="#{beanProvider.token}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
+									<h:inputSecret value="#{beanProvider.password}" required="true" class="w3-input w3-border" />
+									<h:inputSecret value="#{beanProvider.password2}" required="true" class="w3-input w3-border" /></h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
+								<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>
+									<h:inputText value="#{beanProvider.firstName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>
+									<h:inputText value="#{beanProvider.middleInitial}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>
+									<h:inputText value="#{beanProvider.lastName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>
+									<h:selectOneMenu value="#{beanProvider.sex}" required="true" class="w3-input w3-border">
+										<f:selectItem itemValue="M" itemLabel="Male" />
+										<f:selectItem itemValue="F" itemLabel="Female" />
+										<f:selectItem itemValue="N" itemLabel="Non-Binary" />
+										<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" /></h:selectOneMenu></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>
+									<h:inputText value="#{beanProvider.phone}" required="false" class="w3-input w3-border" /></h:column>
+								<h:column><h:commandButton value="UPDATE PROFILE" action="#{beanProvider.updateProfile()}" class="w3-button w3-teal w3-round-xxlarge" />
+        					<button type="reset" class="w3-button w3-teal w3-round-large">RESET</button></h:column>
+							</h:dataTable>
+							</h:form>
+							<button onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-green w3-round-xxlarge">CLOSE</button>
+           	</div>
         </div>
         <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
@@ -151,18 +197,18 @@
               <h:column><label class="w3-text-blue">Last Name</label>
               <h:inputText id="patientLastName"
                            value="#{beanDButil.lastName}"
-		           class="w3-input w3-border"></h:inputText>
+		           				 		class="w3-input w3-border"></h:inputText>
               <h:message for="patientLastName"></h:message></h:column>
               <h:column><label class="w3-text-blue">First Name</label>
               <h:inputText id="patientFirstName"
                            value="#{beanDButil.firstName}"
-		           class="w3-input w3-border"></h:inputText>
+		           						 class="w3-input w3-border"></h:inputText>
               <h:message for="patientFirstName"></h:message></h:column>
               <h:column><h:commandButton value="ADD"
                                action="#{beanDButil.updatePatientProvider()}"
                                class="w3-button w3-teal"></h:commandButton>
               <button class="w3-button w3-teal">RESET</button>
-	      <button onclick="document.getElementById('modalAddPatient').style.display='none'" class="w3-button w3-red">CLOSE</button></h:column>
+	      			<button onclick="document.getElementById('modalAddPatient').style.display='none'" class="w3-button w3-red">CLOSE</button></h:column>
             </h:form>
           </div>
         </div>
