--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -9,46 +9,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="resources/css/w3.css"/>
   <link rel="stylesheet" href="resources/css/font-awesome.min.css" />
-  <title>myRx</title>
+  <title>myRx Provider Patient List</title>
 </head>
 <body>
 
-<div class="w3-container">
-
+<div>
   <div id="body" class="w3-container w3-mobile">
   
-    <div id="top" class="w3-container w3-bar w3-teal w3-card">
+    <div id="top" class="w3-bar w3-teal w3-card">
     
-      <div class="w3-container w3-content w3-mobile w3-row w3-padding">
+      <div class="w3-container w3-mobile w3-row w3-padding">
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
+          <button onclick="document.getElementById('modalProviderProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
           #{beanProvider.username}</button>
-          <div id="modalProviderProfile" class="w3-modal">
+          <div id="modalPatientProfile" class="w3-modal">
             <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
               <span onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times;</span>
               <h:form id="user-profile-form" class="w3-container">
-        			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
-					    	<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet><h3>#{pt.username}</h3></h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>#{pt.email}</h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>#{pt.token}</h:column>
-							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all">
-						  	<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>#{pt.firstName}</h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>#{pt.middleInitial}</h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>#{pt.lastName}</h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>#{pt.sex}</h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>#{pt.phone}</h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">Address</label></f:facet>#{pt.address}</h:column>
-							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
+        			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all w3-responsive">
+					    	<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet><h3>#{pr.username}</h3></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>#{pr.email}</h:column>
+						  	<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>#{pr.firstName}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>#{pr.middleInitial}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>#{pr.lastName}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getPatient(beanProvider.username)}" var="pr" class="w3-table-all">
+								<h:column><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>#{pr.token}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>#{pr.sex}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>#{pr.phone}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Address</label></f:facet>#{pr.address}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all">
 								<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>
 									<h:inputText value="#{beanDButil.username}" required="true" class="w3-input w3-border" /></h:column>
 								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>
 									<h:inputText value="#{beanDButil.email}" required="true" class="w3-input w3-border" /></h:column>
 								<h:column><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>
 									<h:inputText value="#{beanDButil.token}" required="true" class="w3-input w3-border" /></h:column>
-								<h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
-									<h:inputSecret value="#{beanDButil.password}" required="true" class="w3-input w3-border" />
-									<h:inputSecret value="#{beanDButil.password2}" required="true" class="w3-input w3-border" /></h:column>
-							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
 								<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>
 									<h:inputText value="#{beanDButil.firstName}" required="true" class="w3-input w3-border" /></h:column>
 								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>
@@ -63,22 +58,27 @@
 										<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" /></h:selectOneMenu></h:column>
 								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>
 									<h:inputText value="#{beanDButil.phone}" required="false" class="w3-input w3-border" /></h:column>
-								<h:column><h:commandButton value="UPDATE PROFILE" action="#{beanDButil.updateProvider()}" class="w3-button w3-teal w3-round-xxlarge" />
-        					<button type="reset" class="w3-button w3-teal w3-round-large">RESET</button></h:column>
-							</h:dataTable>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
+									<h:inputSecret value="#{beanDButil.password}" required="true" class="w3-input w3-border" />
+									<h:inputSecret value="#{beanDButil.password2}" required="true" class="w3-input w3-border" /></h:column>
+								<h:commandButton value="UPDATE PROFILE" action="#{beanDButil.updateProvider()}" class="w3-button w3-teal w3-round-xxlarge" />
+								<button type="reset" class="w3-button w3-teal w3-round-xxlarge">RESET</button>
+								<button onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-green w3-round-xxlarge">CLOSE</button>
+								</h:dataTable>
 							</h:form>
-							<button onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-green w3-round-xxlarge">CLOSE</button>
            	</div>
+					</div>
         </div>
         <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <a href="index.xhtml"><button class="w3-button w3-green w3-round-xxlarge">
-           LOGOUT</button></a>
+          <h:form>
+            <h:commandButton action="#{beanProvider.logout}" value="LOGOUT" class="w3-button w3-green w3-round-xxlarge"></h:commandButton>
+          </h:form>
         </div>
       </div>
 
     </div>
-
+    
     <div id="middle" class="w3-container w3-mobile w3-card">
 
       <h:dataTable id="providerPatientTable" value="#{beanDButil.getPatients(beanProvider.username)}" var="patient" class="w3-table-all w3-responsive">
@@ -180,39 +180,22 @@
           </h:form>
         </div>
       </div>
-    </div>
+		</div>
 
-    <div id="bottom" class="w3-container w3-mobile w3-card">
+    <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
       <div class="w3-container w3-bar w3-mobile w3-row w3-padding">
-        <div class="w3-container w3-center w3-col s3 m3 l3">
-          <button onclick="document.getElementById('modalAddPatient').style.display='block'" class="w3-button w3-teal w3-round-xxlarge">ADD PATIENT</button>
-        </div>
-        <div id="modalAddPatient" class="w3-modal">
-          <div class="w3-modal-content w3-card w3-center w3-animate-zoom">
-            <button onclick="document.getElementById('modalAddPatient').style.display='none'" class="w3-button w3-red w3-display-topright">X</button>
-            <h:form id="add-patient-form" class="w3-container">
-							<h:column>#{beanProvider.username}</h:column>
-              <h:column><label class="w3-text-blue">Last Name</label>
-              <h:inputText id="patientLastName"
-                           value="#{beanDButil.lastName}"
-		           				 		class="w3-input w3-border"></h:inputText>
-              <h:message for="patientLastName"></h:message></h:column>
-              <h:column><label class="w3-text-blue">First Name</label>
-              <h:inputText id="patientFirstName"
-                           value="#{beanDButil.firstName}"
-		           						 class="w3-input w3-border"></h:inputText>
-              <h:message for="patientFirstName"></h:message></h:column>
-              <h:column><h:commandButton value="ADD" action="#{beanDButil.updatePatientProvider()}" class="w3-button w3-teal"></h:commandButton>
-              <button class="w3-button w3-teal">RESET</button>
-	      			<button onclick="document.getElementById('modalAddPatient').style.display='none'" class="w3-button w3-red">CLOSE</button></h:column>
-            </h:form>
+        <a href="index.xhtml">
+          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">HOME</button>
           </div>
-        </div>
+        </a>
+        <a href="patient-profile.xhtml">
+          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">PROFILE-PAGE</button>
+          </div>
+        </a>
       </div>
     </div>
 
   </div>
-</div>
 </div>
 
 </body>
