--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -22,7 +22,7 @@
         <div class="w3-container w3-center w3-col s4 m4 l4">
           <button onclick="document.getElementById('modalProviderProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
           #{beanProvider.username}</button>
-          <div id="modalPatientProfile" class="w3-modal">
+          <div id="modalProviderProfile" class="w3-modal">
             <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
               <span onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times;</span>
               <h:form id="user-profile-form" class="w3-container">
@@ -114,7 +114,7 @@
         </h:column>
         <h:column>
           <f:facet name="header">Medications</f:facet>
-          <h:commandButton action="#{beanDButil.setPatient(patient.username)}" onclick="document.getElementById('modalPatientMeds').style.display='block'" class="w3-button w3-green">VIEW</h:commandButton>
+          <h:commandButton action="#{beanDButil.setPatient(patient.username)}" label="VIEW" onclick="document.getElementById('modalPatientMeds').style.display='block'" class="w3-button w3-green" />
         </h:column>
       </h:dataTable>
 			<div id="modalPatientMeds" class="w3-modal">
