--- a/source/0.4/src/main/webapp/login.xhtml
+++ b/source/0.4/src/main/webapp/login.xhtml
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<div class="w3-content">
+<div class="w3-container">
 
-  <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card w3-section">
+  <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third"></div>
     <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
       <a href="index.xhtml"><h1>myRX</h1></a>
@@ -23,7 +23,7 @@
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third"></div>
   </div>
 
-  <div class="w3-cell-row w3-section">
+  <div class="w3-cell-row">
 
     <div class="w3-container w3-cell w3-cell-middle w3-mobile w3-twothird">
       <h:form id="patient-login-form" class="w3-container">
@@ -60,7 +60,7 @@
 
   </div>
 
-  <div id="footer" class="footer w3-container w3-bar w3-teal w3-card w3-section">
+  <div id="footer" class="footer w3-container w3-bar w3-teal w3-card">
     <a href="index.xhtml"><h2>myRX</h2></a>
   </div>
 	
