--- a/source/0.4/src/main/webapp/register.xhtml
+++ b/source/0.4/src/main/webapp/register.xhtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div class="w3-content">
+<div class="w3-container">
 
   <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
