--- a/source/0.4/src/main/webapp/provider-patient-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-patient-meds.xhtml
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-<div class="w3-content">
+<div class="w3-container">
 
-  <div id="body" class="w3-container w3-mobile w3-auto">
+  <div id="body" class="w3-container w3-mobile">
   
     <div id="top" class="w3-container w3-bar w3-teal w3-card">
     
@@ -23,92 +23,140 @@
         <div class="w3-container w3-center w3-col s4 m4 l4">
           <a href="provider-profile.xhtml"><button class="w3-button w3-green w3-round-xxlarge">
            #{beanProvider.username}</button></a>
+					<button onclick="document.getElementById('modalProviderProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
+          #{beanProvider.username}</button>
+          <div id="modalProviderProfile" class="w3-modal">
+            <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
+              <span onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times;</span>
+              <h:form id="user-profile-form" class="w3-container">
+        			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all w3-responsive">
+					    	<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet><h3>#{pr.username}</h3></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>#{pr.email}</h:column>
+						  	<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>#{pr.firstName}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>#{pr.middleInitial}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>#{pr.lastName}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all">
+								<h:column><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>#{pr.token}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>#{pr.sex}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>#{pr.phone}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Address</label></f:facet>#{pr.address}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all">
+								<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>
+									<h:inputText value="#{beanDButil.username}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>
+									<h:inputText value="#{beanDButil.email}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>
+									<h:inputText value="#{beanDButil.token}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>
+									<h:inputText value="#{beanDButil.firstName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>
+									<h:inputText value="#{beanDButil.middleInitial}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>
+									<h:inputText value="#{beanDButil.lastName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>
+									<h:selectOneMenu value="#{beanDButil.sex}" required="true" class="w3-input w3-border">
+										<f:selectItem itemValue="M" itemLabel="Male" />
+										<f:selectItem itemValue="F" itemLabel="Female" />
+										<f:selectItem itemValue="N" itemLabel="Non-Binary" />
+										<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" /></h:selectOneMenu></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>
+									<h:inputText value="#{beanDButil.phone}" required="false" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
+									<h:inputSecret value="#{beanDButil.password}" required="true" class="w3-input w3-border" />
+									<h:inputSecret value="#{beanDButil.password2}" required="true" class="w3-input w3-border" /></h:column>
+								<h:commandButton value="UPDATE" action="#{beanDButil.updateProvider()}" class="w3-button w3-teal w3-round-xxlarge" />
+								<button type="reset" class="w3-button w3-teal w3-round-xxlarge">RESET</button>
+								<button onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-green w3-round-xxlarge">CLOSE</button>
+								</h:dataTable>
+							</h:form>
+           	</div>
+					</div>
         </div>
         <div class="w3-container w3-center w3-col s4 m4 l4"><h1>myRx</h1></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <a href="index.xhtml"><button class="w3-button w3-green w3-round-xxlarge">
-           LOGOUT</button></a>
+          <h:form>
+            <h:commandButton action="#{beanProvider.logout}" value="LOGOUT" class="w3-button w3-green w3-round-xxlarge"></h:commandButton>
+          </h:form>
         </div>
-      </div>
-      <div id="modalprofile" class="w3-modal">
-        <div class="w3-modal-content w3-animate-zoom w3-card w3-center">
-          <span onclick="document.getElementById('modalprofile').style.display='none'" class="w3-button w3-xlarge w3-hover-red w3-display-topright" title="Close Modal">X</span>
-          <table class="w3-table-all">
-            <tr><th>DR</th><th>BROWN</th><th>EMMITT</th><th>L</th></tr>
-            <tr><td>brown@doc.edu</td>987-654-3210<td></td><td>121 Flux Lane, Gigawatte, STE 99999</td></tr>
-          </table>
-          <button onclick="document.getElementById('modalprofile').style.display='none'" type="button" class="w3-button w3-red">CLOSE</button>
-        </div>
-      </div>
+			</div>
     </div>
 
     <div id="middle" class="w3-container w3-mobile w3-card">
 
       <div id="patientInfo" class="w3-container">
-        <h2>#{Patient.lastName}</h2><h2>#{Patient.firstName}</h2>
-        <h3>#{Patient.email}</h3><h3>#{Patient.phone}</h3>
-        <p>#{Patient.address}</p>
+				<h:dataTable value="#{beanDButil.getPatient(beanDButil.patient)}" var="pt" class="w3-table-all w3-responsive">
+					<h:column><h2>#{pt.lastName}</h2><h2>#{pt.firstName}</h2></h:column>
+        	<h:column><h3>#{pt.email}</h3><h3>#{pt.phone}</h3></h:column>
+        	<h:column><p>#{pt.address}</p></h:column>
+				</h:dataTable>
       </div>
       <div id="patientMeds" class="w3-container">
-        <h:dataTable value="#{beanProvider.medications}" var="medication" class="w3-table-all">
+				<h:form>
+        <h:dataTable value="#{beanDButil.getMedications(beanDButil.patient)}" var="med" class="w3-table-all">
           <h:column>
             <f:facet name="header">Medication</f:facet>
-            #{medication.name}
+            #{med.name}
           </h:column>
           <h:column>
             <f:facet name="header">Dosage</f:facet>
-            #{medication.dosage} #{medication.doseUnit}
+            #{med.dosage}
+						<h:inputText value="#{beanDButil.dosage}" class="w3-input" />
+          </h:column>
+					<h:column>
+            <f:facet name="header">Unit</f:facet>
+            #{med.doseUnit}
+						<h:inputText value="#{beanDButil.doseUnit}" class="w3-input" />
           </h:column>
           <h:column>
             <f:facet name="header">Issue Date</f:facet>
-            #{medication.issueDate}
+            #{med.issueDate}
           </h:column>
           <h:column>
             <f:facet name="header">Expiration Date</f:facet>
-            #{medication.expDate}
+            #{med.expDate}
+						<h:inputText value="#{beanDButil.expDate}" class="w3-input" />
           </h:column>
           <h:column>
             <f:facet name="header">Update</f:facet>
-            <button onclick="document.getElementById('modalUpdateMed').style.display='block'" class="w3-button w3-green">*</button>
+            <h:commandButton action="#{beanDButil.updateMedication()}" label="*" class="w3-button w3-teal w3-round-xxlarge" />
           </h:column>
           <h:column>
             <f:facet name="header">Remove</f:facet>
-            <button onclick="#delMed() modal#" class="w3-button w3-red">-</button>
+            <h:commandButton action="#{beanDButil.delMedication()}" label="-" class="w3-button w3-red w3-round-xxlarge" />
           </h:column>
         </h:dataTable>
+				</h:form>
+				<h:form>
+					<h:column>
+            <f:facet name="header">Name</f:facet>
+						<h:inputText value="#{beanDButil.name}" required="true" class="w3-input" />
+					</h:column>
+					<h:column>
+            <f:facet name="header">Dosage</f:facet>
+						<h:inputText value="#{beanDButil.dosage}" required="true" class="w3-input" />
+					</h:column>
+					<h:column>
+            <f:facet name="header">Unit</f:facet>
+						<h:selectOneMenu value="#{beanDButil.doseUnit}" required="true" class="w3-select">
+							<f:selectItem itemValue="g" itemLabel="gram" />
+							<f:selectItem itemValue="mg" itemLabel="milligram" />
+							<f:selectItem itemValue="mcg" itemLabel="microgram" />
+						</h:selectOneMenu>
+					</h:column>
+					<h:column>
+            <f:facet name="header">Issued</f:facet>
+						<h:inputText value="#{beanDButil.issueDate}" required="true" class="w3-input" />
+					</h:column>
+					<h:column>
+            <f:facet name="header">Expires</f:facet>
+						<h:inputText value="#{beanDButil.expDate}" required="true" class="w3-input" />
+					</h:column>
+					<h:column>
+            <h:commandButton action="#{beanDButil.addMedication()}" label="ADD" class="w3-button w3-green w3-round-xxlarge" />
+          </h:column>
+				</h:form>
       </div>
-      <div id="modalUpdateMed" class="w3-modal">
-        <div class="w3-modal-content w3-card w3-center w3-animate-zoom">
-          <button onclick="document.getElementById('modalUpdateMed').style.display='none'" class="w3-button w3-red">X</button>
-          <h:form id="change-med-form" class="w3-container">
-            <table class="w3-table-all">
-              <tr><td>Medication Name</td><td>#{medication.name}</td><td></td></tr>
-              <tr><td>Dosage</td><td>#{medication.dosage}</td><td>
-                <h:inputText id="medDosage"
-                             value="#"
-                             class="w3-input w3-border"></h:inputText>
-                <h:message for="medDosage"></h:message></td></tr>
-              <tr><td>Dose Unit</td><td>#{medication.doseUnit}</td><td>
-                <h:inputText id="medDoseUnit"
-                             value="#"
-                             class="w3-input w3-border"></h:inputText>
-                <h:message for="medDoseUnit"></h:message></td></tr>
-              <tr><td>Issue Date</td><td>#{medication.issueDate}</td><td></td></tr>
-              <tr><td>Expiration Date</td><td>#{medication.expDate}</td><td>
-                <h:inputText id="medExpDate"
-                             value="#"
-                             class="w3-input w3-border"></h:inputText>
-                <h:message for="medExpDate"></h:message></td>
-              </tr>
-            </table>
-            <h:commandButton value="ADD"
-                             action="#"
-		             class="w3-button w3-teal"></h:commandButton>
-            <button class="w3-button w3-teal">RESET</button>
-            <button onclick="document.getElementById('modalUpdateMed').style.display='none'" class="w3-button w3-red">CLOSE</button>
-          </h:form>
-        </div>
-      </div>
+      
     </div>
 
     <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
